--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "library-manager-api",
+  "name": "personal-library-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.mjs"
